Создал матрицу трансформаций для координат. Теперь объекты лежат в [-1;1] и на выходе преобразуются в координаты по пикселям. Добавлены адаптивные карты. В связи с тем, что все до этого было завязано на координатах, было переделано много логики. Появился отдельный класс для коллизий, который с хорошей точностью отслеживает столкновения. Есть возможность однопользовательской и 2 пользовательской игры(включается пока только хардово, через коммент создания нового user-танка). Созданы глупые боты, который пока что ездят все синхроно в одном направлении. Нужно сделать: боты(больше рандома), убирать убитые объекты(чтобы не стреляли после смерти), сцены для выбора режима и кол-во игроков, по хорошему счет в битвах  механизм продолжения игры без перезахода в играть. В идеале сделать парсер для создания карт из файликов.